k8s/ambient/dep/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: callee
  namespace: grpc-mesh-demo
  labels:
    app: callee
spec:
  selector:
    app: callee
  ports:
  - name: grpc
    port: 50051
    targetPort: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: caller
  namespace: grpc-mesh-demo
  labels:
    app: caller
spec:
  selector:
    app: caller
  ports:
  - name: http
    port: 8080
    targetPort: http
