k8s/ambient/dep/80-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caller
  namespace: grpc-mesh-demo
  labels:
    app: caller
    istio.io/ingress-use-waypoint: "true"
spec:
  selector:
    app: caller
  ports:
  - name: http
    port: 8080
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: callee
  namespace: grpc-mesh-demo
  labels:
    app: callee
    istio.io/ingress-use-waypoint: "true"
spec:
  selector:
    app: callee
  ports:
  - name: grpc
    port: 50051
    targetPort: grpc
