k8s/ambient/dep/50-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: public-gw
  namespace: grpc-mesh-demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - route-purple-jellyfish-grpc-mesh-demo.apps.snoaxolab.axodevelopment.dev
