k8s/ambient/dep/20-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: public-gw
  namespace: grpc-mesh-demo
spec:
  host: route-purple-jellyfish-grpc-mesh-demo.apps.snoaxolab.axodevelopment.dev
  port:
    targetPort: 80
  to:
    kind: Service
    name: public-gw-istio
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
