k8s/ambient/dep/30-destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: callee-subsets
  namespace: grpc-mesh-demo
spec:
  host: callee.grpc-mesh-demo.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
