k8s/ambient/dep/40-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: caller-route
  namespace: grpc-mesh-demo
spec:
  parentRefs:
  - name: public-gw
    namespace: grpc-mesh-demo
  hostnames:
  - "route-purple-jellyfish-grpc-mesh-demo.apps.snoaxolab.axodevelopment.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /call
    backendRefs:
    - name: caller
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: caller-waypoint-route
  namespace: grpc-mesh-demo
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: caller
    namespace: grpc-mesh-demo
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /call
    backendRefs:
    - name: caller
      port: 8080
